[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "default_values"
version = "0.4.2"
description = "Sphinx extension to show default values in documentation."
readme = "README.rst"
keywords = [ "sphinx", "documentation",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/default_values"
"Issue Tracker" = "https://github.com/sphinx-toolbox/default_values/issues"
"Source Code" = "https://github.com/sphinx-toolbox/default_values"
Documentation = "https://default_values.readthedocs.io/en/latest"
