[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "default_values"
version = "0.4.3"
description = "Sphinx extension to show default values in documentation."
readme = "README.rst"
keywords = [ "sphinx", "documentation",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/default_values"
"Issue Tracker" = "https://github.com/sphinx-toolbox/default_values/issues"
"Source Code" = "https://github.com/sphinx-toolbox/default_values"
Documentation = "https://default_values.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "sphinxcontrib"

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"
